Suppress JFFI sun.misc.Unsafe warnings in ExifTool example